--- a/index.html
+++ b/index.html
@@ -4,11 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Mi Propio Captcha</title>
+    <!-- CSS only -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+<!-- JavaScript Bundle with Popper -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script>
         $(document).ready(function(){
-            Captcha();
+            GenerarCaptcha();
             $("#enviar").attr("disabled", "disabled");
             var ran1=0;
             var ran2=0;
@@ -18,7 +22,7 @@
             rant = ran1+ran2;
             $("#resolver").text("Cuanto es "+ran1+" + "+ran2);
             $("#respuesta").keyup(function(e){
-                var nr = $(this).val();
+                var nr = $("#respuesta").val();
                 if (nr==rant){
                     $("#enviar").removeAttr("disabled");
                 } else {
@@ -32,8 +36,7 @@
 
 
         })
-        function Captcha() {
-try {
+        function GenerarCaptcha() {
     var alpha = new Array('A', 'B', 'C', 'D', 'E', 'F', 'G', 'H', 'I', 'J', 'K', 'L', 'M', 'N', 'O', 'P', 'Q', 'R', 'S', 'T',
         'U', 'V', 'W', 'X', 'Y', 'Z', 'a', 'b', 'c', 'd', 'e', 'f', 'g', 'h', 'i', 'j', 'k', 'l', 'm', 'n',
         'o', 'p', 'q', 'r', 's', 't', 'u', 'v', 'w', 'x', 'y', 'z');
@@ -48,20 +51,45 @@ try {
         var g = alpha[Math.floor(Math.random() * alpha.length)];
     }
     var code = a + ' ' + b + ' ' + ' ' + c + ' ' + d + ' ' + e + ' ' + f + ' ' + g;
-    console.log(code);
-    document.getElementById("micaptcha").value = code;
-    $("#micaptcha").text(code);
-} catch (error) { console.log(error); }
+    $("#micaptcha").html(code);
+}
+function EnviarFor(){
+    var Captcha = $("#micaptcha").html();
+    var CaptchaSinEspacios = Captcha.replace(/ /g, "")
+    var RespuestaCaptcha = $("#respuestacaptcha").val();
+console.log(CaptchaSinEspacios);
+console.log(RespuestaCaptcha);
+    if(RespuestaCaptcha == CaptchaSinEspacios){
+   location.href ="https://www.youtube.com/channel/UCb6SsWVJkNOmzksFwIINkVw";
+   }
+    else {
+        GenerarCaptcha();
+        $('#respuestacaptcha').val('');
+     alert("Captcha Incorrecto Intentelo de Nuevo");
+   }
 }
     </script>
 </head>
 <body>
-    <form action="www.google.com" method="post" id="form1">
-        <label id="resolver"></label>
-        <br>
-        <label id="micaptcha"></label>
-        <input type="text" id="respuesta">
-        <button id="enviar">Enviar</button>
-    </form>
+    <div class="mt-3 text-center">
+        <div class="container">
+            <h1>Mi Propio Captchat</h1>
+            <div class="mb-4">
+                <form action="www.google.com" method="post" id="form1">
+                    <span class="badge text-bg-primary mb-3" id="resolver"></span>
+                    <br>
+                    <div class="mb-3">
+                        <input class="form-control form-control-lg" type="text" id="respuesta">
+                    </div>
+                    <button type="button" class="btn btn-primary" id="enviar">Enviar</button>
+                </form>
+            </div>
+                <span class="badge text-bg-success mb-3" id="micaptcha"></span>
+                <div class="mb-3">
+                    <input class="form-control form-control-lg" type="text" id="respuestacaptcha">
+                </div>
+                <button type="button" class="btn btn-success" onclick="EnviarFor()">Enviar</button>
+        </div>
+    </div>
 </body>
 </html>
